[feat] 新增webapp前端代码

--- a/docker/nginx-app/webapp/Dockerfile
+++ b/docker/nginx-app/webapp/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx
 # nginx配置
 COPY ./nginx/webapp.conf /etc/nginx/conf.d/webapp.conf
-# web应用
+# 这个www目录就是当前打包出来的应用
 COPY ./www /usr/share/nginx/html
 #! 用于向用户和其他开发人员传达容器内应用程序所监听的端口。
 #! 它本身并不会在构建或运行镜像时触发任何动作。
