[feat] 新增prettier格式化代码

--- a/docs/docker/nginx-app/docker-compose.yml
+++ b/docs/docker/nginx-app/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: '3'
 services:
   webapp:
     build: ./webapp # 根据指定目录下的Dockerfile构建镜像
@@ -15,8 +15,8 @@ services:
     depends_on:
       - webserver
     ports:
-      - "4534:4534"
+      - '4534:4534'
   webserver:
     build: ./webserver # 根据指定目录下的Dockerfile构建镜像
     expose:
-      - "3000" # 暴露容器给依赖当前容器的容器使用
+      - '3000' # 暴露容器给依赖当前容器的容器使用
