--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,4 @@
 {
   "semi": false,
-  "singleQuote": true,
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": {
-        "parser": "json"
-      }
-    }
-  ]
+  "singleQuote": true
 }
