--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "lint": "prettier --write ."
   },
   "devDependencies": {
+    "prettier": "^3.0.2",
     "vitepress": "1.0.0-rc.4"
   }
 }
