--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "dotenv -e .env.dev.local -- next dev",
-    "build": "next build",
+    "postinstall": "prisma generate",
+    "dev": "dotenv -e .env.dev.local && next dev",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "prettier-lint": "prettier --write .",
-    "migrate": "dotenv -e .env.local -- prisma migrate dev",
-    "migrate:dev": "dotenv -e .env.dev.local -- prisma migrate dev --name=dev"
+    "migrate": "dotenv -e .env.local && prisma migrate dev",
+    "migrate:dev": "dotenv -e .env.dev.local && prisma migrate dev --name=dev"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
