--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "jsxSingleQuote": true,
+  "endOfLine": "auto",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
