--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prisma": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "rehype-highlight": "^6.0.0",
     "remark": "^14.0.3",
     "remark-slug": "^7.0.1",
