--- a/app/blog/docker/nginx-app/webapp/Dockerfile
+++ b/app/blog/docker/nginx-app/webapp/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx
 # nginx配置
 COPY ./nginx/webapp.conf /etc/nginx/conf.d/webapp.conf
+# 先npm run build进行打包
 # 这个www目录就是当前打包出来的应用
 COPY ./www /usr/share/nginx/html
 #! 用于向用户和其他开发人员传达容器内应用程序所监听的端口。
