--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "rehype-highlight": "^6.0.0",
+    "rehype-mdx-code-props": "^2.0.0",
     "remark": "^14.0.3",
     "remark-slug": "^7.0.1",
     "tailwind-highlightjs": "^2.0.1",
