--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
+    "framer-motion": "^10.16.4",
     "fs-extra": "^11.1.1",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
