--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "clsx": "^2.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
@@ -34,6 +35,7 @@
     "immer": "^10.0.3",
     "next": "14.0.1",
     "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
     "next13-progressbar": "^1.0.4",
     "postcss": "8.4.28",
     "prettier": "^3.0.3",
@@ -47,6 +49,7 @@
     "remark": "^14.0.3",
     "remark-slug": "^7.0.1",
     "tailwind-highlightjs": "^2.0.1",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "use-immer": "^0.9.0",
