--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@monaco-editor/react": "^4.6.0",
     "@next/mdx": "^13.5.4",
     "@prisma/client": "^5.4.2",
     "@tailwindcss/typography": "^0.5.10",
