--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "immer": "^10.0.3",
+    "monaco-editor": "^0.46.0",
     "next": "14.0.1",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
