--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@next/mdx": "^13.5.4",
     "@prisma/client": "^5.4.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tailwindcss/typography": "^0.5.10",
     "@types/fs-extra": "^11.0.2",
     "@types/mdx": "^2.0.8",
@@ -25,6 +26,7 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
@@ -34,6 +36,7 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.9.0",
     "immer": "^10.0.3",
+    "lucide-react": "^0.373.0",
     "medium-zoom": "^1.1.0",
     "monaco-editor": "^0.46.0",
     "next": "14.0.1",
@@ -54,6 +57,7 @@
     "tailwind-highlightjs": "^2.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "use-immer": "^0.9.0",
     "zustand": "^4.4.3"
