feat: refactor iframe rendering

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv-cli": "^8.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
@@ -62,5 +63,17 @@
     "typescript": "5.2.2",
     "use-immer": "^0.9.0",
     "zustand": "^4.4.3"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma"
+    ],
+    "onlyBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "prisma"
+    ]
   }
 }
