--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "rehype-highlight": "^6.0.0",
     "rehype-mdx-code-props": "^2.0.0",
     "remark": "^14.0.3",
+    "remark-gfm": "^4.0.1",
     "remark-slug": "^7.0.1",
     "tailwind-highlightjs": "^2.0.1",
     "tailwind-merge": "^2.2.1",
