--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@next/mdx": "^13.5.4",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@shikijs/core": "^3.3.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/fs-extra": "^11.0.2",
     "@types/mdx": "^2.0.8",
@@ -53,12 +54,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
-    "rehype-highlight": "^6.0.0",
     "rehype-mdx-code-props": "^2.0.0",
     "remark": "^14.0.3",
     "remark-gfm": "3.0.1",
     "remark-slug": "^7.0.1",
-    "tailwind-highlightjs": "^2.0.1",
+    "shiki": "^3.3.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
