--- a/package.json
+++ b/package.json
@@ -16,57 +16,58 @@
     "gen-posts-info": "node script/gen-posts-info.mjs"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@monaco-editor/react": "^4.6.0",
-    "@next/mdx": "^13.5.4",
-    "@prisma/client": "^6.6.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@shikijs/core": "^3.3.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/fs-extra": "^11.0.2",
-    "@types/mdx": "^2.0.8",
-    "@types/node": "20.5.6",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "dotenv-cli": "^8.0.0",
-    "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "^9.0.0",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@monaco-editor/react": "^4.7.0",
+    "@next/mdx": "^16.1.6",
+    "@prisma/client": "^7.4.1",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@shikijs/core": "^3.22.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/fs-extra": "^11.0.4",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "25.3.0",
+    "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
+    "autoprefixer": "10.4.24",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
+    "dotenv-cli": "^11.0.0",
+    "eslint": "10.0.2",
+    "eslint-config-next": "16.1.6",
+    "eslint-config-prettier": "^10.1.8",
     "fast-glob": "^3.3.3",
-    "framer-motion": "^10.16.4",
-    "fs-extra": "^11.1.1",
+    "framer-motion": "^12.34.3",
+    "fs-extra": "^11.3.3",
     "gray-matter": "^4.0.3",
-    "highlight.js": "^11.9.0",
-    "immer": "^10.0.3",
-    "lucide-react": "^0.373.0",
+    "highlight.js": "^11.11.1",
+    "immer": "^11.1.4",
+    "lucide-react": "^0.575.0",
     "medium-zoom": "^1.1.0",
-    "monaco-editor": "^0.46.0",
-    "next": "14.2.35",
-    "next-mdx-remote": "^4.4.1",
-    "next-themes": "^0.2.1",
-    "next13-progressbar": "^1.0.4",
-    "postcss": "8.4.28",
-    "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.5.6",
-    "prisma": "^6.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-loading-skeleton": "^3.3.1",
-    "rehype-mdx-code-props": "^2.0.0",
-    "remark": "^14.0.3",
-    "remark-gfm": "3.0.1",
-    "remark-slug": "^7.0.1",
-    "shiki": "^3.3.0",
-    "tailwind-merge": "^2.2.1",
+    "monaco-editor": "^0.55.1",
+    "next": "16.1.6",
+    "next-mdx-remote": "^6.0.0",
+    "next-themes": "^0.4.6",
+    "next13-progressbar": "^1.2.2",
+    "postcss": "8.5.6",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "prisma": "^7.4.1",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "react-loading-skeleton": "^3.5.0",
+    "rehype-mdx-code-props": "^3.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "4.0.1",
+    "shiki": "^3.22.0",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
-    "use-immer": "^0.9.0",
-    "zustand": "^4.4.3"
+    "typescript": "5.9.3",
+    "use-immer": "^0.11.0",
+    "zustand": "^5.0.11"
   },
   "pnpm": {
     "ignoredBuiltDependencies": [
